--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
-
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
+eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
